// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly renders with the John Common demo data 1`] = `
<div
  className="bg-white shadow br3 mb3 ph3 pb3"
>
  <div
    className="flex flex-wrap justify-end mb1"
  >
    <h2
      className="f5 fw7 mv3 mr-auto"
    >
      Search Summary
    </h2>
    <button
      className="ma2 nowrap mid-gray link hover-blue fw6 br3 pv1 ph2"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="fas fa-bolt pr2"
      />
      Generate Paperwork
    </button>
    <button
      className="ma2 nowrap mid-gray link hover-blue fw6 br3 pv1 ph2"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="fas fa-download pr2"
      />
      Summary PDF
    </button>
  </div>
  <div
    className="flex-ns flex-wrap"
  >
    <div
      className="w-100 w-two-thirds-l"
    >
      <h3
        className="bt b--light-gray pt2 mb3"
      >
        <span
          className="fw7"
        >
          Cases
        </span>
         (
        5
        )
      </h3>
      <h3
        className="bt b--light-gray pt2 mb3"
      >
        <span
          className="fw7"
        >
          Charges
        </span>
         (
        5
        )
        <p
          className="f6 fw5 pt1"
        >
          Excludes traffic violations
        </p>
      </h3>
      <div
        className="mb3"
      >
        <div
          className="dark-blue bb b--light-gray lh-copy pb1"
        >
          <span
            className="fw7 mb2"
          >
            Eligible Nov 28, 2025
          </span>
           
          (1)
        </div>
        <ul
          className="list"
        >
          <li
            className="f6 bb b--light-gray pv2"
          >
            <a
              className="link hover-blue"
              href="#100000-1"
            >
              Aggravated Theft in the First Degree (CONVICTED) Charged Jul 16, 2016
            </a>
          </li>
        </ul>
      </div>
      <div
        className="mb3"
      >
        <div
          className="green bb b--light-gray lh-copy pb1"
        >
          <span
            className="fw7 mb2"
          >
            Eligible Now
          </span>
           
          (3)
        </div>
        <ul
          className="list"
        >
          <li
            className="f6 bb b--light-gray pv2"
          >
            <a
              className="link hover-blue"
              href="#200000-1"
            >
              Obstruction of search warrant (DISMISSED) Charged Jul 16, 2019
            </a>
          </li>
          <li
            className="f6 bb b--light-gray pv2"
          >
            <a
              className="link hover-blue"
              href="#110000-1"
            >
              Theft in the Second Degree (CONVICTED) Charged Apr 2, 2015
            </a>
          </li>
          <li
            className="f6 bb b--light-gray pv2"
          >
            <a
              className="link hover-blue"
              href="#120000-1"
            >
              Poss under oz Marijuana (CONVICTED) Charged Apr 2, 2014
            </a>
          </li>
        </ul>
      </div>
      <div
        className="mb3"
      >
        <div
          className="purple bb b--light-gray lh-copy pb1"
        >
          <span
            className="fw7 mb2"
          >
            Needs More Analysis
          </span>
           
          (1)
          <p
            className="f6 fw5"
          >
            These charges need clarification below before an accurate analysis can be determined
          </p>
        </div>
        <ul
          className="list"
        >
          <li
            className="f6 bb b--light-gray pv2"
          >
            <a
              className="link hover-blue"
              href="#210000-1"
            >
              Poss Controlled Sub (CONVICTED) Charged Sep 23, 2018
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="w-100 w-33-l ph3-l mb3"
    >
      <div
        className="mb4"
      >
        <h3
          className="fw7 bt b--light-gray pt2 mb3"
        >
          Balance due by county
           
          <a
            className=" gray link hover-blue underline"
            href="/manual#paybalances"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fas fa-question-circle link hover-dark-blue"
            />
            <span
              className="visually-hidden"
            >
              Learn more about balances
            </span>
          </a>
        </h3>
        <ul
          className="mw5 list"
        >
          None
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`correctly renders with the Multiple Charges demo data 1`] = `
<div
  className="bg-white shadow br3 mb3 ph3 pb3"
>
  <div
    className="flex flex-wrap justify-end mb1"
  >
    <h2
      className="f5 fw7 mv3 mr-auto"
    >
      Search Summary
    </h2>
    <button
      className="ma2 nowrap mid-gray link hover-blue fw6 br3 pv1 ph2"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="fas fa-bolt pr2"
      />
      Generate Paperwork
    </button>
    <button
      className="ma2 nowrap mid-gray link hover-blue fw6 br3 pv1 ph2"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="fas fa-download pr2"
      />
      Summary PDF
    </button>
  </div>
  <div
    className="flex-ns flex-wrap"
  >
    <div
      className="w-100 w-two-thirds-l"
    >
      <h3
        className="bt b--light-gray pt2 mb3"
      >
        <span
          className="fw7"
        >
          Cases
        </span>
         (
        3
        )
      </h3>
      <h3
        className="bt b--light-gray pt2 mb3"
      >
        <span
          className="fw7"
        >
          Charges
        </span>
         (
        4
        )
        <p
          className="f6 fw5 pt1"
        >
          Excludes traffic violations
        </p>
      </h3>
      <div
        className="mb3"
      >
        <div
          className="green bb b--light-gray lh-copy pb1"
        >
          <span
            className="fw7 mb2"
          >
            Eligible Now
          </span>
           
          (1)
        </div>
        <ul
          className="list"
        >
          <li
            className="f6 bb b--light-gray pv2"
          >
            <a
              className="link hover-blue"
              href="#110000-1"
            >
              Theft in the Third Degree (DISMISSED) Charged Jan 21, 2022
            </a>
          </li>
        </ul>
      </div>
      <div
        className="mb3"
      >
        <div
          className="dark-blue bb b--light-gray lh-copy pb1"
        >
          <span
            className="fw7 mb2"
          >
            Eligible Now If Balance Paid
          </span>
           
          (2)
        </div>
        <ul
          className="list"
        >
          <li
            className="fw7 pt2"
          >
            Baker 100000 – $1000.0
          </li>
          <li
            className="f6 bb b--light-gray pv2"
          >
            <a
              className="ml2"
              href="#100000-1"
            >
              Disorderly Conduct in the First Degree (CONVICTED) Charged Jan 21, 2019
            </a>
          </li>
          <li
            className="f6 bb b--light-gray pv2"
          >
            <a
              className="ml2"
              href="#100000-2"
            >
              Disorderly Conduct in the Second Degree (DISMISSED) Charged Jan 21, 2019
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="w-100 w-33-l ph3-l mb3"
    >
      <div
        className="mb4"
      >
        <h3
          className="fw7 bt b--light-gray pt2 mb3"
        >
          Balance due by county
           
          <a
            className=" gray link hover-blue underline"
            href="/manual#paybalances"
            onClick={[Function]}
          >
            <i
              aria-hidden="true"
              className="fas fa-question-circle link hover-dark-blue"
            />
            <span
              className="visually-hidden"
            >
              Learn more about balances
            </span>
          </a>
        </h3>
        <ul
          className="mw5 list"
        >
          <div>
            <h4
              className="fw6 mb2"
            >
              Baker
            </h4>
            <ul
              className="mw5 list mb3"
            >
              <li
                className="mb2"
              >
                <a
                  className="link hover-blue"
                  href="/#100000"
                  onClick={[Function]}
                >
                  100000
                </a>
                 
                <span
                  className="fr"
                >
                  $1,000.00
                </span>
              </li>
            </ul>
          </div>
          <div
            className="mw5 bt b--light-gray pt2"
          >
            <span
              className="fw6"
            >
              Total
            </span>
            <span
              className="fr"
            >
              $1,000.00
            </span>
          </div>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
